crates/carta/tests/snapshots/golden_e2e__csv__mediawiki__basic.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! Name
! Age
! City
|-
| Alice
| 30
| Berlin
|-
| Bob
| 25
| Hamburg
|}
