crates/carta/tests/snapshots/golden_e2e__csv__mediawiki__crlf.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! x
! y
|-
| 1
| 2
|-
| 3
| 4
|}
