crates/carta/tests/snapshots/golden_e2e__csv__mediawiki__empty-fields.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! left
! right
|-
|
| filled
|-
| filled
|
|-
|
|
|}
