crates/carta/tests/snapshots/golden_e2e__csv__mediawiki__header-only.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! header one
! header two
|-
| only header row above
|
|}
