crates/carta/tests/snapshots/golden_e2e__csv__mediawiki__literal-text.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! markup
! link
|-
| *not italic*
| [not a link](url)
|}
