crates/carta/tests/snapshots/golden_e2e__csv__mediawiki__quoted.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! product
! note
|-
| Widget, deluxe
| ships &quot;today&quot;
|-
| multi<br />
line cell
| plain
|}
