crates/carta/tests/snapshots/golden_e2e__csv__mediawiki__ragged.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! a
! b
! c
|-
| 1
| 2
|
|-
| 4
| 5
| 6
|-
| 8
| 9
| 10
|}
