crates/carta/tests/snapshots/golden_e2e__csv__mediawiki__single-column.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! fruit
|-
| apple
|-
| banana
|-
| cherry
|}
