crates/carta/tests/snapshots/golden_e2e__csv__mediawiki__whitespace.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! col1
! col2
! col3
|-
| a
| spaced text
| trailing
|}
